<resources>
    <string name="app_name">내하루</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wendsday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saterday">토</string>
    <string name="save">저장</string>
    <string name="add">추가</string>
</resources>