<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="0dip"
     android:layout_weight="1"
     android:gravity="center"
     android:background="@color/colorAccent"
     android:orientation="horizontal">
<Button
    android:id="@+id/btn_prv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
 android:text="이전"/>
  <TextView
      android:id="@+id/tv_month"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="11"/>
  <Button
      android:id="@+id/btn_nxt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
   android:text="다음"/>
 </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sunday"/>
        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/monday"/>
        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tuesday"/>
        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/wendsday"/>
        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/thursday"/>
        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/friday"/>
        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/saterday"/>
    </LinearLayout>
<GridView
    android:id="@+id/gv_calendar"
    android:layout_width="match_parent"
    android:layout_height="0dip"
    android:numColumns="7"
    android:layout_weight="9"/>
</LinearLayout>